# WaifuAI

./: .gitignore  Cargo.toml  Readme.md  package.json
.github/workflows/: release.yml  rust.yml
projects/ackerman/: Cargo.toml
projects/ackerman-nai/: Cargo.toml
projects/ackerman-nai/src/: lib.rs
projects/ackerman-nai/src/qq_bots/: dict.txt  image_request.rs
projects/ackerman-qqbot/: Cargo.toml  Readme.md
projects/ackerman-qqbot/src/: lib.rs
projects/ackerman-qqbot/src/bots/: mod.rs  secret_key.rs
projects/ackerman-qqbot/src/errors/: mod.rs
projects/ackerman-qqbot/src/restful/: get_channel.rs  get_guild.rs  get_message.rs  mod.rs  secret_key.rs  send_message.rs
projects/ackerman-qqbot/src/utils/: mod.rs
projects/ackerman-qqbot/src/wss/: connect_event.rs  emoji_event.rs  heartbeat_event.rs  message_event.rs  mod.rs  ready_event.rs  subscription_mask.rs
projects/ackerman-qqbot/tests/: main.rs
projects/ackerman/src/: lib.rs  main.rs
projects/ackerman/src/errors/: mod.rs
projects/ackerman/src/qq_bots/: dict.txt  image_request.rs  mod.rs
projects/ackerman/src/restful/: secret_key.rs  send_message.rs
projects/ackerman/src/runtime/: get_channel.rs  get_guild.rs  get_message.rs  mod.rs  secret_key.rs  send_message.rs
projects/ackerman/src/wss/: mod.rs
projects/nai-api/: Cargo.toml
projects/nai-api/src/: lib.rs
projects/nai-api/src/errors/: mod.rs
projects/nai-api/src/nai_image/: image_request.rs  mod.rs  negative.txt  positive.txt
projects/nai-api/src/secret/: mod.rs
projects/nai-cli/: Cargo.toml  Readme.md
projects/nai-cli/src/: main.rs
projects/nai-cli/src/builtin/: builtin.toml  mod.rs
projects/nai-cli/src/command_args/: mod.rs
projects/nai-cli/src/nai-image/: image_request.rs  mod.rs
projects/nai-cli/src/task_builder/: mod.rs
projects/waifu2x/: Cargo.toml
projects/waifu2x-api/: Cargo.toml
projects/waifu2x/src/: lib.rs
projects/waifu2x/src/errors/: mod.rs
projects/waifu2x/src/esr_gan/: mod.rs
projects/waifu2x/src/nai_image/: mod.rs
projects/waifu2x/src/secret/: mod.rs
projects/waifu2x/src/sr_cnn/: mod.rs
projects/waifu2x/src/utils/: image_request.rs  mod.rs
