[package]
name = "qq-bot"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "..."
repository = "https://github.com/oovm/Ackerman"
documentation = "https://docs.rs/qq-bot"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"


[dependencies]
url = "2.3.1"
chrono = {version = "0.4.22", features = ["serde"]}
serde = {version = "1.0.145", features = ["derive"]}
serde_json = "1.0.86"
toml = "0.5.9"
log = "0.4.17"
async-trait = "0.1.57"
tokio = {version = "1.21.2", features = ["full"]}
tokio-tungstenite = {version = "0.17.2", features = ["native-tls"]}
reqwest = {version = "0.11.12", features = ["json"]}
futures-util = "0.3.24"

[dev-dependencies]

[features]
default = []
