[package]
name = "ackerman"
version = "0.1.2"
authors = ["Aster <192607617@qq.com>"]
description = "..."
repository = "https://github.com/oovm/Ackerman"
documentation = "https://docs.rs/Ackerman"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"


[dependencies]
toml = "0.5.9"
reqwest = {version = "0.11.12", features = ["json"]}
tokio = {version = "1.21.2", features = ["full"]}
serde = {version = "1.0.145", features = ["derive"]}

[dev-dependencies]

[features]
default = []
