[package]
name = "ackerman"
version = "0.1.2"
authors = ["Aster <192607617@qq.com>"]
description = "..."
repository = "https://github.com/oovm/Ackerman"
documentation = "https://docs.rs/Ackerman"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"


[dependencies]
ackerman-qq = {version = "0.1.2", path = "../ackerman-qqbot"}

[dev-dependencies]

[features]
default = []
