[package]
name = "novel-ai"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "..."
repository = "https://github.com/oovm/Ackerman"
documentation = "https://docs.rs/novel-ai"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
url = "2.3.1"
futures-util = "0.3.24"
tokio = {version = "1.21.2", features = ["full"]}
async-trait = "0.1.57"
serde = {version = "1.0.145", features = ["derive"]}
serde_json = "1.0.86"
base64 = "0.13.0"
rand = "0.8.5"
reqwest = {version = "0.11.12", features = ["json"]}

[dev-dependencies]

[features]
default = []
