[package]
name = "novel-ai"
version = "0.3.0"
authors = ["Aster <192607617@qq.com>"]
description = "Noval-AI API Request"
repository = "https://github.com/oovm/Ackerman"
documentation = "https://docs.rs/novel-ai"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
url = "2.3.1"
indexmap = "1.9.1"
itertools = "0.10.5"
futures-util = "0.3.24"
serde = {version = "1.0.145", features = ["derive"]}
serde_json = "1.0.86"
base64 = "0.13.0"
reqwest = {version = "0.11.12", features = ["json"]}

[dev-dependencies]

[features]
default = []
