[package]
name = "nai-waifu"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "..."
repository = "https://github.com/oovm/Ackerman"
documentation = "https://docs.rs/novel-ai"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
novel-ai = {version = "0.0.0", path = "../nai-api"}

[dev-dependencies]

[features]
default = []
