[package]
name = "nai-waifu"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "..."
repository = "https://github.com/oovm/Ackerman"
documentation = "https://docs.rs/novel-ai"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[[bin]]
name = "nai"
path = "src/main.rs"

[dependencies]
toml = "0.5.9"
clap = {version = "4.0.12", features = ["derive"]}
tokio = {version = "1.21.2", features = ["full"]}
tokio-stream = "0.1.11"
novel-ai = {version = "0.3.0", path = "../nai-api"}
futures-util = "0.3.24"
rand = {version = "0.8.5", features = []}
chrono = "0.4.22"
serde = {version = "1.0.145", features = ["derive"]}
press-btn-continue = "0.1.1"
reqwest = {version = "0.11.12", features = ["json"]}

[dev-dependencies]


[features]
default = []
trial = []